# datek-agar-kivy

./: .gitignore  CHANGELOG.md  pyproject.toml  pytest.ini
.github/workflows/: CI.yml
agar_kivy/: agar.kv  agar.py  utils.py
tests/: test_agar.py
