[tool.poetry]
name = "agar-kivy"
version = "0.1.0"
description = "Kivy client for Agar game"
authors = ["DAtek <dudasa7@gmail.com>"]
license = "MIT"

[tool.poetry.scripts]
agar-kivy = 'agar_kivy.agar:main'

[tool.poetry.dependencies]
python = "^3.9"
Kivy = {extras = ["base"], version = "^2.0.0"}
numpy = "^1.20.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
