[tool.poetry]
name = "datek-agar-kivy"
version = "0.0.0"
description = "Kivy client for Agar game"
authors = ["Attila Dudas <dudasa7@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://gitlab.com/datek-agar/agar-core"

[tool.poetry.scripts]
agar-kivy = 'datek_agar_kivy.agar:main'

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.20.0"
Kivy = "^2.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
